--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
@@ -13,19 +13,55 @@
   }
 }
 
-.App-header {
+.App {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
+  gap: 40px;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.List{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border: 4px solid #61dafb;
+  border-radius: 10px;
+  width: 60vw;
+  padding: 10px;
+  justify-content: space-between;
+}
+
+.ListItem{
+  display: flex;
+  font-size: 20px;
+  padding: 5px 10px;
+  border-radius: 10px;
+  justify-content: space-between;
+  background-color: #61dafb79;
+}
+
+input{
+  font-size: 20px;
+  padding: 4px 10px;
+  border: 2px solid #61dafb;
+  border-radius: 5px 0px 0px 5px;
+}
+
+button{
+  background-color: #61dafb;
+  color: #ffffff;
+  border: 1px solid #61dafb;
+  border-radius: 0px 5px 5px 0px;
+  font-size: 20px;
+  padding: 5px 10px;
 }
 
 @keyframes App-logo-spin {
